# Chat_Resume

./: README.md  docker-compose.yml
golang/: go.mod  main.go
python/: Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
python/agent/: llm.py  prompt.py  rag_chain.py
python/auth/: security.py
python/controller/: controller.py
python/doc/: resume.txt
python/models/: schemas.py
python/tasks/: chunks_generator.py  history_manage.py  vector_storage.py
